crates/ink/tests/ui/abi/sol/fail/event-name-override-invalid.stderr
error: `name` attribute argument value must begin with an alphabetic character, underscore or dollar sign
 --> tests/ui/abi/sol/fail/event-name-override-invalid.rs:1:21
  |
1 | #[ink::event(name = "1MyEvent")]
  |                     ^^^^^^^^^^
